# pype9

./: .autotools  .cproject  .gitignore  .project  .pydevproject  .travis.yml  AUTHORS  Dockerfile  Kinetic_Extension.py  LICENSE  MANIFEST.in  README.md  README.rst  cerebc_nmodl_to_xml.py  conn_rules.xml  debugging_network.txt  granule_cell_template_mapping.xml  init_vars.processed.txt  init_vars.txt  installation.txt  requirements.txt  setup.cfg  setup.py
.travis-debug/: Dockerfile
.travis-debug/simple-debug/: Dockerfile
.travis-debug2/: Dockerfile
NINEMLP/: cerebellar_cortex.xml  fabios_network.xml
NINEMLP/ncml/: Basket.xml  Golgi.xml  Granule.xml  MossyFiber.xml  Purkinje.xml  Purkinjetest.xml  Stellate.xml
btmorph_setup/: setup.py
ci/: install_nest.sh  install_neuron.sh
cmd/: compare.py  convert.py  import.py  pype9  simulate.py
doc/: Makefile  index.rst  make.bat  modules.rst  pype9.cells.code_gen.nest.rst  pype9.cells.code_gen.neuron.rst  pype9.cells.code_gen.rst  pype9.cells.nest.rst  pype9.cells.neuron.rst  pype9.cells.rst  pype9.importer.neuron.rst  pype9.importer.rst  pype9.morphology.io.rst  pype9.morphology.rst  pype9.pynn_interface.cell_wrappers.rst  pype9.pynn_interface.network.rst  pype9.pynn_interface.population.rst  pype9.pynn_interface.projection.rst  pype9.pynn_interface.rst  pype9.pynn_interface.synapses.rst  pype9.rst  requirements.txt
doc/old_source/: installation.rst
doc/source/: add_backends.rst  api.rst  cli.rst  command_line_interface.rst  conf.py  contributing.rst  developer.rst  extending.rst  getting_help.rst  getting_started.rst  index.rst  installation.rst  python_api.rst  python_scripting.rst  scripting.rst  unsupported.rst
examples/: HodgkinHuxley.xml  HodgkinHuxleyClass.xml  HodgkinHuxleyMod.xml  Khaliq03.nemo  brunel.py  example_pynn.py  izhikevich.py  liaf_with_alpha.py  regular_interval.py  simple_cell.nml  simple_hh.py  simple_izhi.py
examples/api/: brunel.py  izhikevich.py  liaf_with_alpha.py  simple_hh.py
examples/bash/: convert_xml_to_yml.sh  simple_hh.sh
examples/fabios_golgi_cell/: GRC_CALC.mod  GRC_LKG1.mod  GRC_LKG2.mod  Golgi_ComPanel.hoc  MF_template.hoc  gap.mod  granule_template.hoc  utils.hoc
ext/: hh_psc_alpha.h  hodgkin-huxley.xml
ext/fabios_network/: .gitignore  GRC_KIR.mod  Golgi_KV.mod  Golgi_SK2.mod  Golgi_template.hoc  Na_conc.mod  README.txt  mosinit.hoc
ext/pyNN_examples/: IF_cond_alpha.py  IF_curr_alpha.py  simpleRandomNetwork.py  tsodyksmarkram.py
external_refs/: .gitignore  example_nest_electrode.py  hh.nemo  hh_psc_alpha.cpp  test_nest_script.py
external_refs/AKP06-example/: AKP06.nemo
external_refs/fabios_golgi_cell/: GRC_KCA.mod  GRC_KM.mod
external_refs/fabios_network/: .gitignore  Golgi_BK.mod  Golgi_KA.mod  Golgi_hcn2.mod  network.hoc
external_refs/pyNN/: SpikeSourcePoisson.py
external_refs/pyNN_examples/: HH_cond_exp.py  (+11 more)
install/: nest.sh  neuron.sh
linux_install/: nest.sh
nemo_nmodl_generated/: CGC_Ca.mod  CGC_CaHVA.mod  CGC_KA.mod  CGC_KCa.mod  CGC_KM.mod  CGC_KV.mod  CGC_Kir.mod  CGC_Lkg1.mod  CGC_Lkg2.mod  CGC_Na.mod  CGC_NaR.mod  CGC_pNa.mod  Granule.xml  fabios_granule.hoc
nineline/: __init__.py  arguments.py  utils.py
prereq/: install_nest.sh  install_neuron.sh
pype9/: __init__.py  annotations.py  arguments.py  axb.py  comparer.py  exceptions.py  mpi.py  nest.py  neuron.py  plot.py  testing.py  unit_conversion.py  utils.py
requirements/: install_nest.sh  install_neuron.sh
scripts/: compare.py  generate_unit_conversion.py  import.py  pype9  que_sge.py  submit_sge.py
src/: overlap-resolution.py.py  random_tree.py  xy_coverages.py  xy_overlaps.py
test/: buffer_overrun_mwe.py  exc.yml  hodgkin_huxley_K.mod  hodgkin_huxley_Leak.mod  hodgkin_huxley_Na.mod  simple.py  test_build.py  test_cmds.py  test_dynamics.py  test_examples.py  test_hh.py  test_izhikevich.py  test_network.py  test_neuron_import.py  test_seeding.py  test_unit_handling.py  test_with_synapses.py  utils.py
test/compare/nest/: build.sh  config.h.in  configure.ac  plot_comparison.py
test/compare/nest/src/: Makefile.am  archiving_node.h  arraydatum.h  branch.cpp  branch.h  conditions.h  datum.h  dict.h  dictutils.h  doubledatum.h  event.h  exceptions.h  integerdatum.h  main.cpp  master.cpp  master.h  mock_nest.cpp  mock_nest.h  mock_sli.cpp  mock_sli.h  nest.h  nest_time.cpp  network.h  numerics.cpp  numerics.h  random.h  recordables_map.h  ring_buffer.h  setup.h  status.h  tarrayobj.cpp  tarrayobj.h  token.h  tokenarray.cpp  tokenarray.h  universal_data_logger.h  universal_data_logger_impl.h
test/compare/nest/src/models/: IafAlpha.cpp  IafAlpha.h  IzhikevichBranch.cpp  IzhikevichBranch.h  IzhikevichMaster.cpp  IzhikevichMaster.h  PyNNLeakyIntegrateAndFire.cpp  PyNNLeakyIntegrateAndFire.h
test/data/xml/9build/nest/IzhikevichBuiltIn.honto/src/: IzhikevichBuiltIn.cpp  IzhikevichBuiltIn.h  IzhikevichBuiltInModule.cpp  IzhikevichBuiltInModule.h  Makefile.am
test/data/xml/9build/nest/IzhikevichBuiltIn.honto/src/sli/: IzhikevichBuiltInModule-init.sli
test/data/xml/9build/nest/MyModule/src/: IzhikevichBuiltIn.cpp  IzhikevichBuiltIn.h  IzhikevichBuiltIn.old.cpp  IzhikevichBuiltIn.old.h  IzhikevichBuiltInModule.cpp  Makefile  Makefile.am  Test.cpp  Test.h  TestModule.cpp  TestModule.h  configure  configure.ac  drop_odd_spike_connection.h
test/data/xml/9build/nest/MyModule/src/autom4te.cache/: output.0  traces.1
test/data/xml/9build/nest/MyModule/src/libltdl/: config.status  libtool
test/data/xml/9build/nest/MyModule/src/sli/: TestModule-init.sli
test/raw/nest/: IzhikevichBranch.cpp  IzhikevichBranch.h  IzhikevichMaster.cpp  IzhikevichMaster.h  Makefile.am  NEWS  README  build.sh  configure.ac  main.cpp  mock_nest.h  test.h
test/raw/nest/src/: IzhikevichBranch.cpp  IzhikevichMaster.cpp  Makefile.am  branch.cpp  branch.h  main.cpp  master.cpp  mock_nest.cpp  mock_nest.h
tombo/: comparison.job.sh  comparison.run.sh  fabios_network.job.sh  fabios_network.que.py  fabios_network.run.sh  mechanism.local.sh  mechanism.tombo.sh  save_connections.job.sh  save_connections.run.sh
(+1095 files in other folders)
